fix layout bug for mobile view on project page

--- a/Public/styles/navigation.css
+++ b/Public/styles/navigation.css
@@ -1,6 +1,6 @@
 body {
   overflow-x: hidden;
-  padding-top: 95px;
+  padding-top: 50px;
 }
 
 nav.navbar {
